--- a/Task2.ipynb
+++ b/Task2.ipynb
@@ -486,7 +486,7 @@
     }
    ],
    "source": [
-    "print(\"--- Starting Method: Linear Probing ---\")\n",
+    "print(\"--- Starting Method: Linear Probing Flowers ---\")\n",
     "\n",
     "# We'll use the existing CLIP model (loaded earlier) and attach a linear classifier on top of image features.\n",
     "# Get image feature dimension with a dummy forward\n",
@@ -508,21 +508,11 @@
     "def make_head(num_classes):\n",
     "    return nn.Linear(feat_dim, num_classes).to(DEVICE)\n",
     "\n",
-    "# choose dataset: 'flowers' or 'cub'\n",
-    "dataset_choice = 'flowers'\n",
-    "if dataset_choice == 'flowers':\n",
-    "    num_classes = len(flowers102_class_names)\n",
-    "    train_loader = flowers102_train_loader if 'flowers102_train_loader' in globals() else None\n",
-    "    val_loader = flowers102_val_loader if 'flowers102_val_loader' in globals() else None\n",
-    "    test_loader = flowers102_test_loader if 'flowers102_test_loader' in globals() else None\n",
-    "    class_names = flowers102_class_names\n",
-    "else:\n",
-    "    num_classes = len(cub_bird_class_names)\n",
-    "    # If train/val splits aren't prepared, fall back to test-only evaluation\n",
-    "    train_loader = cub_bird_train_loader if 'cub_bird_train_loader' in globals() else None\n",
-    "    val_loader = cub_bird_val_loader if 'cub_bird_val_loader' in globals() else None\n",
-    "    test_loader = cub_bird_test_loader if 'cub_bird_test_loader' in globals() else None\n",
-    "    class_names = cub_bird_class_names\n",
+    "num_classes = len(flowers102_class_names)\n",
+    "train_loader = flowers102_train_loader if 'flowers102_train_loader' in globals() else None\n",
+    "val_loader = flowers102_val_loader if 'flowers102_val_loader' in globals() else None\n",
+    "test_loader = flowers102_test_loader if 'flowers102_test_loader' in globals() else None\n",
+    "class_names = flowers102_class_names\n",
     "\n",
     "head = make_head(num_classes)\n",
     "\n",
@@ -615,7 +605,138 @@
     "    test_loss, test_acc = evaluate(test_loader)\n",
     "    print(f\"Test Loss: {test_loss:.4f} | Test Acc: {test_acc*100:.2f}%\")\n",
     "\n",
-    "print('Linear probing finished')\n"
+    "print('Linear probing Flowers finished')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8cbc075f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"--- Starting Method: Linear Probing Birds ---\")\n",
+    "\n",
+    "# We'll use the existing CLIP model (loaded earlier) and attach a linear classifier on top of image features.\n",
+    "# Get image feature dimension with a dummy forward\n",
+    "with torch.no_grad():\n",
+    "    dummy_px = processor(images=Image.new(\"RGB\", (224, 224), \"white\"), return_tensors=\"pt\")[\"pixel_values\"].to(DEVICE)\n",
+    "    feat = model.get_image_features(pixel_values=dummy_px)\n",
+    "    feat_dim = feat.shape[-1]\n",
+    "\n",
+    "# Freeze full vision encoder to perform linear probing\n",
+    "vision_model = model.vision_model\n",
+    "visual_projection = getattr(model, 'visual_projection', None)\n",
+    "for p in vision_model.parameters():\n",
+    "    p.requires_grad = False\n",
+    "if visual_projection is not None:\n",
+    "    for p in visual_projection.parameters():\n",
+    "        p.requires_grad = False\n",
+    "\n",
+    "# Simple linear head\n",
+    "def make_head(num_classes):\n",
+    "    return nn.Linear(feat_dim, num_classes).to(DEVICE)\n",
+    "\n",
+    "\n",
+    "num_classes = len(cub_bird_class_names)\n",
+    "# If train/val splits aren't prepared, fall back to test-only evaluation\n",
+    "train_loader = cub_bird_train_loader if 'cub_bird_train_loader' in globals() else None\n",
+    "val_loader = cub_bird_val_loader if 'cub_bird_val_loader' in globals() else None\n",
+    "test_loader = cub_bird_test_loader if 'cub_bird_test_loader' in globals() else None\n",
+    "class_names = cub_bird_class_names\n",
+    "\n",
+    "head = make_head(num_classes)\n",
+    "\n",
+    "# training setup\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "lr = 1e-3\n",
+    "optimizer = torch.optim.Adam(head.parameters(), lr=lr)\n",
+    "train_losses, val_losses, val_accuracies = [], [], []\n",
+    "\n",
+    "from time import time\n",
+    "\n",
+    "def evaluate(loader):\n",
+    "    head.eval()\n",
+    "    total, correct, loss_sum = 0, 0, 0.0\n",
+    "    with torch.no_grad():\n",
+    "        for batch in loader:\n",
+    "            if isinstance(batch, dict):\n",
+    "                imgs, labels = batch['pixel_values'], batch['label']\n",
+    "            else:\n",
+    "                imgs, labels = batch\n",
+    "            if isinstance(imgs, list):\n",
+    "                imgs = torch.stack(imgs, dim=0)\n",
+    "            imgs = imgs.to(DEVICE)\n",
+    "            labels = labels.to(DEVICE)\n",
+    "            feats = model.get_image_features(pixel_values=imgs)\n",
+    "            feats = feats / feats.norm(dim=-1, keepdim=True)\n",
+    "            logits = head(feats)\n",
+    "            loss = criterion(logits, labels)\n",
+    "            preds = logits.argmax(dim=-1)\n",
+    "            correct += (preds == labels).sum().item()\n",
+    "            total += labels.size(0)\n",
+    "            loss_sum += loss.item() * labels.size(0)\n",
+    "    return loss_sum / total, correct / total\n",
+    "\n",
+    "# If no training loader is available, skip training and just run evaluation on test set\n",
+    "if train_loader is None:\n",
+    "    print('No training loader prepared for the chosen dataset; running evaluation on test set only')\n",
+    "    test_loss, test_acc = evaluate(test_loader)\n",
+    "    print(f\"Test Loss: {test_loss:.4f} | Test Acc: {test_acc*100:.2f}%\")\n",
+    "else:\n",
+    "    # training loop\n",
+    "    for epoch in range(NUM_EPOCHS):\n",
+    "        head.train()\n",
+    "        epoch_start = time()\n",
+    "        running_loss = 0.0\n",
+    "        seen = 0\n",
+    "        for batch in tqdm(train_loader, desc=f\"Epoch {epoch+1}/{NUM_EPOCHS} [Train]\"):\n",
+    "            if isinstance(batch, dict):\n",
+    "                imgs, labels = batch['pixel_values'], batch['label']\n",
+    "            else:\n",
+    "                imgs, labels = batch\n",
+    "            if isinstance(imgs, list):\n",
+    "                imgs = torch.stack(imgs, dim=0)\n",
+    "            imgs = imgs.to(DEVICE)\n",
+    "            labels = labels.to(DEVICE)\n",
+    "\n",
+    "            feats = model.get_image_features(pixel_values=imgs)\n",
+    "            feats = feats / feats.norm(dim=-1, keepdim=True)\n",
+    "            logits = head(feats)\n",
+    "            loss = criterion(logits, labels)\n",
+    "\n",
+    "            optimizer.zero_grad()\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "\n",
+    "            running_loss += loss.item() * labels.size(0)\n",
+    "            seen += labels.size(0)\n",
+    "\n",
+    "        train_loss = running_loss / max(1, seen)\n",
+    "        if val_loader is not None:\n",
+    "            val_loss, val_acc = evaluate(val_loader)\n",
+    "        else:\n",
+    "            val_loss, val_acc = evaluate(test_loader)\n",
+    "        train_losses.append(train_loss); val_losses.append(val_loss); val_accuracies.append(val_acc)\n",
+    "        epoch_end = time()\n",
+    "        print(f\"Epoch {epoch+1} - Train Loss: {train_loss:.4f} | Val Loss: {val_loss:.4f} | Val Acc: {val_acc*100:.2f}% | Time: {epoch_end-epoch_start:.2f}s\")\n",
+    "\n",
+    "    # plot loss curves\n",
+    "    try:\n",
+    "        plt.figure(figsize=(6,3))\n",
+    "        plt.plot(train_losses, label='train')\n",
+    "        plt.plot(val_losses, label='val')\n",
+    "        plt.legend()\n",
+    "        plt.title('Loss curves')\n",
+    "        plt.show()\n",
+    "    except Exception:\n",
+    "        pass\n",
+    "\n",
+    "    # final test\n",
+    "    test_loss, test_acc = evaluate(test_loader)\n",
+    "    print(f\"Test Loss: {test_loss:.4f} | Test Acc: {test_acc*100:.2f}%\")\n",
+    "\n",
+    "print('Linear probing Birds finished')\n"
    ]
   },
   {
@@ -639,7 +760,7 @@
     }
    ],
    "source": [
-    "print(\"--- Starting Method: LoRA Fine-Tuning ---\")\n",
+    "print(\"--- Starting Method: LoRA Fine-Tuning Flowers ---\")\n",
     "\n",
     "# Try to apply LoRA to the vision encoder. If PEFT is unavailable or fails, fall back to tuning the visual projection + head.\n",
     "try:\n",
@@ -677,15 +798,172 @@
     "    criterion = nn.CrossEntropyLoss()\n",
     "    optimizer = torch.optim.Adam(params, lr=5e-4)\n",
     "\n",
-    "    # choose loader based on dataset_choice\n",
-    "    if dataset_choice == 'flowers':\n",
-    "        train_loader = flowers102_train_loader if 'flowers102_train_loader' in globals() else None\n",
-    "        val_loader = flowers102_val_loader if 'flowers102_val_loader' in globals() else None\n",
-    "        test_loader = flowers102_test_loader if 'flowers102_test_loader' in globals() else None\n",
+    "    \n",
+    "    train_loader = flowers102_train_loader if 'flowers102_train_loader' in globals() else None\n",
+    "    val_loader = flowers102_val_loader if 'flowers102_val_loader' in globals() else None\n",
+    "    test_loader = flowers102_test_loader if 'flowers102_test_loader' in globals() else None\n",
+    "    \n",
+    "    def eval_model(m):\n",
+    "        m.eval(); head.eval()\n",
+    "        total, correct, loss_sum = 0, 0, 0.0\n",
+    "        with torch.no_grad():\n",
+    "            for batch in (val_loader if val_loader is not None else test_loader):\n",
+    "                if isinstance(batch, dict):\n",
+    "                    imgs, labels = batch['pixel_values'], batch['label']\n",
+    "                else:\n",
+    "                    imgs, labels = batch\n",
+    "                if isinstance(imgs, list):\n",
+    "                    imgs = torch.stack(imgs, dim=0)\n",
+    "                imgs = imgs.to(DEVICE)\n",
+    "                labels = labels.to(DEVICE)\n",
+    "                feats = m.get_image_features(pixel_values=imgs)\n",
+    "                feats = feats / feats.norm(dim=-1, keepdim=True)\n",
+    "                logits = head(feats)\n",
+    "                loss = criterion(logits, labels)\n",
+    "                preds = logits.argmax(dim=-1)\n",
+    "                correct += (preds == labels).sum().item()\n",
+    "                total += labels.size(0)\n",
+    "                loss_sum += loss.item() * labels.size(0)\n",
+    "        return loss_sum/total, correct/total\n",
+    "\n",
+    "    # train LoRA + head (if train_loader exists)\n",
+    "    if train_loader is None:\n",
+    "        print('No training loader available for LoRA path; running quick eval instead')\n",
+    "        tloss, tacc = eval_model(model_lora)\n",
+    "        print(f\"Val/Test Loss: {tloss:.4f} | Acc: {tacc*100:.2f}%\")\n",
     "    else:\n",
-    "        train_loader = cub_bird_train_loader if 'cub_bird_train_loader' in globals() else None\n",
-    "        val_loader = cub_bird_val_loader if 'cub_bird_val_loader' in globals() else None\n",
-    "        test_loader = cub_bird_test_loader if 'cub_bird_test_loader' in globals() else None\n",
+    "        for epoch in range(NUM_EPOCHS):\n",
+    "            model_lora.train(); head.train()\n",
+    "            running_loss = 0.0; seen = 0\n",
+    "            for batch in tqdm(train_loader, desc=f\"LoRA Epoch {epoch+1}/{NUM_EPOCHS} [Train]\"):\n",
+    "                if isinstance(batch, dict):\n",
+    "                    imgs, labels = batch['pixel_values'], batch['label']\n",
+    "                else:\n",
+    "                    imgs, labels = batch\n",
+    "                if isinstance(imgs, list):\n",
+    "                    imgs = torch.stack(imgs, dim=0)\n",
+    "                imgs = imgs.to(DEVICE)\n",
+    "                labels = labels.to(DEVICE)\n",
+    "                feats = model_lora.get_image_features(pixel_values=imgs)\n",
+    "                feats = feats / feats.norm(dim=-1, keepdim=True)\n",
+    "                logits = head(feats)\n",
+    "                loss = criterion(logits, labels)\n",
+    "                optimizer.zero_grad(); loss.backward(); optimizer.step()\n",
+    "                running_loss += loss.item() * labels.size(0); seen += labels.size(0)\n",
+    "            val_loss, val_acc = eval_model(model_lora)\n",
+    "            print(f\"LoRA Epoch {epoch+1} - Train Loss: {running_loss/max(1,seen):.4f} | Val Loss: {val_loss:.4f} | Val Acc: {val_acc*100:.2f}%\")\n",
+    "        test_loss, test_acc = eval_model(model_lora)\n",
+    "        print(f\"LoRA Test Loss: {test_loss:.4f} | Test Acc: {test_acc*100:.2f}%\")\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(\"LoRA path failed or PEFT not available; falling back to tuning visual projection + head. Error:\", e)\n",
+    "    # fallback approach\n",
+    "    model_fb = CLIPModel.from_pretrained(MODEL_ID).to(DEVICE)\n",
+    "    if hasattr(model_fb, 'visual_projection') and model_fb.visual_projection is not None:\n",
+    "        for p in model_fb.visual_projection.parameters():\n",
+    "            p.requires_grad = True\n",
+    "    for p in model_fb.vision_model.parameters():\n",
+    "        p.requires_grad = False\n",
+    "    with torch.no_grad():\n",
+    "        dummy_px = processor(images=Image.new(\"RGB\", (224, 224), \"white\"), return_tensors=\"pt\")[\"pixel_values\"].to(DEVICE)\n",
+    "        feat = model_fb.get_image_features(pixel_values=dummy_px)\n",
+    "        feat_dim = feat.shape[-1]\n",
+    "    head = nn.Linear(feat_dim, num_classes).to(DEVICE)\n",
+    "    optimizer = torch.optim.Adam(list(head.parameters()) + list(filter(lambda p: p.requires_grad, model_fb.parameters())), lr=1e-3)\n",
+    "    criterion = nn.CrossEntropyLoss()\n",
+    "    if 'train_loader' not in globals() or train_loader is None:\n",
+    "        print('No training loader available for fallback; exiting fallback')\n",
+    "    else:\n",
+    "        for epoch in range(NUM_EPOCHS):\n",
+    "            model_fb.train(); head.train()\n",
+    "            running_loss = 0.0; seen = 0\n",
+    "            for batch in tqdm(train_loader, desc=f\"Fallback Epoch {epoch+1}/{NUM_EPOCHS} [Train]\"):\n",
+    "                if isinstance(batch, dict):\n",
+    "                    imgs, labels = batch['pixel_values'], batch['label']\n",
+    "                else:\n",
+    "                    imgs, labels = batch\n",
+    "                if isinstance(imgs, list):\n",
+    "                    imgs = torch.stack(imgs, dim=0)\n",
+    "                imgs = imgs.to(DEVICE); labels = labels.to(DEVICE)\n",
+    "                feats = model_fb.get_image_features(pixel_values=imgs)\n",
+    "                feats = feats / feats.norm(dim=-1, keepdim=True)\n",
+    "                logits = head(feats)\n",
+    "                loss = criterion(logits, labels)\n",
+    "                optimizer.zero_grad(); loss.backward(); optimizer.step()\n",
+    "                running_loss += loss.item()*labels.size(0); seen += labels.size(0)\n",
+    "            print(f\"Fallback epoch {epoch+1} train loss: {running_loss/max(1,seen):.4f}\")\n",
+    "        # Evaluate fallback\n",
+    "        def eval_fb():\n",
+    "            head.eval(); model_fb.eval()\n",
+    "            total, correct = 0, 0\n",
+    "            with torch.no_grad():\n",
+    "                for batch in (val_loader if val_loader is not None else test_loader):\n",
+    "                    if isinstance(batch, dict):\n",
+    "                        imgs, labels = batch['pixel_values'], batch['label']\n",
+    "                    else:\n",
+    "                        imgs, labels = batch\n",
+    "                    if isinstance(imgs, list):\n",
+    "                        imgs = torch.stack(imgs, dim=0)\n",
+    "                    imgs = imgs.to(DEVICE); labels = labels.to(DEVICE)\n",
+    "                    feats = model_fb.get_image_features(pixel_values=imgs)\n",
+    "                    feats = feats / feats.norm(dim=-1, keepdim=True)\n",
+    "                    preds = head(feats).argmax(dim=-1)\n",
+    "                    correct += (preds == labels).sum().item(); total += labels.size(0)\n",
+    "            return correct/total\n",
+    "        print(f\"Fallback Val Acc: {eval_fb()*100:.2f}%\")\n",
+    "\n",
+    "print('LoRA Flowers finished')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "718945c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"--- Starting Method: LoRA Fine-Tuning Birds ---\")\n",
+    "\n",
+    "# Try to apply LoRA to the vision encoder. If PEFT is unavailable or fails, fall back to tuning the visual projection + head.\n",
+    "try:\n",
+    "    # load a fresh CLIP model to avoid interference\n",
+    "    model_lora = CLIPModel.from_pretrained(MODEL_ID).to(DEVICE)\n",
+    "    vision_model = model_lora.vision_model\n",
+    "\n",
+    "    lora_config = LoraConfig(\n",
+    "        r=8,\n",
+    "        lora_alpha=16,\n",
+    "        target_modules=[\"q_proj\", \"v_proj\", \"k_proj\"],\n",
+    "        lora_dropout=0.05,\n",
+    "        bias=\"none\",\n",
+    "        task_type=TaskType.IMAGE_CLASSIFICATION\n",
+    "    )\n",
+    "\n",
+    "    vision_model_lora = get_peft_model(vision_model, lora_config)\n",
+    "    model_lora.vision_model = vision_model_lora\n",
+    "    print(\"LoRA Model - Trainable Parameters:\")\n",
+    "    vision_model_lora.print_trainable_parameters()\n",
+    "\n",
+    "    # freeze visual projection and text encoder if present\n",
+    "    if hasattr(model_lora, 'visual_projection') and model_lora.visual_projection is not None:\n",
+    "        for p in model_lora.visual_projection.parameters():\n",
+    "            p.requires_grad = False\n",
+    "\n",
+    "    # prepare head\n",
+    "    with torch.no_grad():\n",
+    "        dummy_px = processor(images=Image.new(\"RGB\", (224, 224), \"white\"), return_tensors=\"pt\")[\"pixel_values\"].to(DEVICE)\n",
+    "        feat = model_lora.get_image_features(pixel_values=dummy_px)\n",
+    "        feat_dim = feat.shape[-1]\n",
+    "    head = nn.Linear(feat_dim, num_classes).to(DEVICE)\n",
+    "\n",
+    "    params = list(filter(lambda p: p.requires_grad, model_lora.parameters())) + list(head.parameters())\n",
+    "    criterion = nn.CrossEntropyLoss()\n",
+    "    optimizer = torch.optim.Adam(params, lr=5e-4)\n",
+    "\n",
+    "\n",
+    "    train_loader = cub_bird_train_loader if 'cub_bird_train_loader' in globals() else None\n",
+    "    val_loader = cub_bird_val_loader if 'cub_bird_val_loader' in globals() else None\n",
+    "    test_loader = cub_bird_test_loader if 'cub_bird_test_loader' in globals() else None\n",
     "\n",
     "    def eval_model(m):\n",
     "        m.eval(); head.eval()\n",
@@ -796,7 +1074,7 @@
     "            return correct/total\n",
     "        print(f\"Fallback Val Acc: {eval_fb()*100:.2f}%\")\n",
     "\n",
-    "print('LoRA section finished')\n"
+    "print('LoRA Birds finished')\n"
    ]
   }
  ],
